# bevy-snake

./: Cargo.toml
assets/: my_project.ldtk
src/: main.rs
src/game/: events.rs  mod.rs  resources.rs  state.rs  systems.rs
src/game/menu/: mod.rs  systems.rs
src/game/snake/: components.rs  mod.rs  systems.rs
src/game/snake/control/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
