[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "*"
image = "*"
winit = "0.28.6"
bevy-inspector-egui = "*"

[dependencies.bevy_kira_audio]
version = "0.16.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]